# CSCN-Demo

./: .gitignore  Biomarker_GSE115978.py  Biomarker_GSE121893.py  Biomarker_GSE131907.py  Biomarker_GSE132465.py  Biomarker_GSE138852.py  Biomarker_GSE159115.py  GO_KEGG.R  LICENSE  README.md  env.sh  prepare_GSE115978.py  prepare_GSE121893.py  prepare_GSE131907.py  prepare_GSE132465.py  prepare_GSE159115.R  pyenv.sh  pyproject.toml  requirements-dag-viewer.txt  run_deseq2_GSE115978.R  run_deseq2_GSE121893.R  run_deseq2_GSE131907.R  run_deseq2_GSE132465.R  run_deseq2_GSE159115.R
apps/dag-viewer/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
configs/: README.md
configs/GSE138852/: config.yaml
configs/SCP2046/: sham1_full_adaptive_block_prior.yaml
docs/: Comment2_response.md  Comment3_response.md  configuration.md  dag_viewer.md  design_and_development.md  enrichment_work_log.md  installation.md  results_figure_captions_zh.md  results_interpretation_paragraphs_zh.md  results_interpretation_report.md  results_interpretation_report_zh.md  reviewer_response_outline_zh.md  reviewer_response_rebuttal_en_ktotal.md  reviewer_response_rebuttal_en_kwithin.md  visualizations_csv_paths_zh.md
examples/: README.md
examples/GSE121893/: config.yaml
scripts/analysis/: compare_seqfish_ckm_clustering.py
scripts/biomarker/: Biomarker_GSE115978.py  Biomarker_GSE121893.py  Biomarker_GSE131907.py  Biomarker_GSE132465.py  Biomarker_GSE138852.py  Biomarker_GSE159115.py  (+3 more)
tests/: __init__.py  test_cscn_workflow.py  test_dag_viewer_service.py
(+50 files in other folders)
